# child-learn

./: CMakeLists.txt  README.md
src/: addition.cpp  translation.cpp  translation.h
